Resolve "Order of hints is changing when editing a training definition"